apps/teslamate/manifests/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: teslamate
  labels:
    app: mosquitto
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
      protocol: TCP
