apps/teslamate/manifests/teslamateapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teslamateapi
  namespace: teslamate
  labels:
    app: teslamateapi
spec:
  type: ClusterIP
  selector:
    app: teslamateapi
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
